Update .gitignore to include MLX-GUI assets and modify tray.py for cleaner UI. Removed icon from tray app and adjusted menu item labels for simplicity.

--- a/.gitignore
+++ b/.gitignore
@@ -245,4 +245,9 @@ generation_config.json
 *.tar
 *.tar.gz
 *.rar
-*.7z 
+*.7z
+
+# Keep MLX-GUI assets
+!src/mlx_gui/assets/
+!src/mlx_gui/assets/*.png
+!src/mlx_gui/assets/*.ico 
