--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mlx-gui"
-version = "0.1.0"
+version = "1.0.0"
 description = "A lightweight RESTful wrapper around Apple's MLX engine for dynamically loading and serving MLX-compatible models"
 readme = "README.md"
 requires-python = ">=3.11"
-license = {text = "MIT"}
+license = {text = "GPL-3.0"}
 authors = [
     {name = "Matt Rogers", email = "matt@matthewrogers.org"}
 ]
@@ -16,7 +16,7 @@ keywords = ["mlx", "apple", "machine-learning", "gui", "rest-api"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: MacOS",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
