--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "rich>=13.6.0",
     "typer>=0.9.0",
     "appdirs>=1.4.4",
+    "mlx-whisper>=0.12.0",
+    "mlx-audio>=0.1.0",
 ]
 
 [project.optional-dependencies]
@@ -64,6 +66,11 @@ app = [
     "pyinstaller>=6.0.0",
     "rumps>=0.4.0",
     "pillow>=10.0.0",
+]
+
+audio = [
+    "mlx-whisper>=0.12.0",
+    "mlx-audio>=0.1.0",
 ]
 
 [project.scripts]
