Enhance API and build system for vision and embedding model support
- Updated version to 1.1.0 to reflect new features.
- Added support for vision models using MLX-VLM, including installation instructions and usage examples in API documentation.
- Introduced new endpoints for generating embeddings and handling vision generation requests.
- Enhanced build scripts to include vision model dependencies and ensure proper integration.
- Improved memory management and compatibility checks for loading models.
- Updated admin interface to facilitate loading and managing embedding models.
- Removed outdated test file to streamline the codebase.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mlx-gui"
-version = "1.0.0"
+version = "1.1.0"
 description = "A lightweight RESTful wrapper around Apple's MLX engine for dynamically loading and serving MLX-compatible models"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -40,6 +40,7 @@ dependencies = [
     "appdirs>=1.4.4",
     "mlx-whisper>=0.4.0",
     "mlx-audio>=0.1.0",
+    "mlx-vlm>=0.1.0",
 ]
 
 [project.optional-dependencies]
@@ -71,6 +72,11 @@ app = [
 audio = [
     "mlx-whisper>=0.4.0",
     "mlx-audio>=0.1.0",
+]
+
+vision = [
+    "mlx-vlm>=0.1.0",
+    "pillow>=10.0.0",
 ]
 
 [project.scripts]
