--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ anyio==4.9.0
 appdirs==1.4.4
 attrs==25.3.0
 audioread==3.0.1
-av==14.4.0
+av==14.0.0
 babel==2.17.0
 blis==1.3.0
 catalogue==2.0.10
@@ -36,10 +36,10 @@ dill==0.3.8
 dlinfo==2.0.0
 dnspython==2.7.0
 docopt==0.6.2
-einops==0.8.1
+einops==0.8.0
 einx==0.3.0
 espeakng-loader==0.2.4
-fastapi==0.115.14
+fastapi==0.111.0
 fastrtc==0.0.28
 fastrtc-moonshine-onnx==20241016
 ffmpy==0.6.0
@@ -96,7 +96,7 @@ murmurhash==1.0.13
 networkx==3.5
 num2words==0.5.14
 numba==0.61.2
-numpy==2.2.6
+numpy==1.26.4
 omegaconf==2.3.0
 onnxruntime==1.22.0
 opencv-python==4.10.0.84
@@ -131,6 +131,7 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+python-socketio==5.11.3
 pytz==2025.2
 PyYAML==6.0.2
 rdflib==7.1.4
@@ -154,7 +155,7 @@ six==1.17.0
 smart_open==7.3.0.post1
 sniffio==1.3.1
 sounddevice==0.5.2
-soundfile==0.13.1
+soundfile==0.12.1
 soxr==0.5.0.post1
 spacy==3.8.7
 spacy-curated-transformers==0.3.1
@@ -162,7 +163,7 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.41
 srsly==2.5.1
-starlette==0.46.2
+starlette==0.37.2
 sympy==1.14.0
 thinc==8.3.6
 threadpoolctl==3.6.0
